overlays/staging/with-blue-green/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
$patch: delete
