overlays/staging/with-blue-green/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-preview
spec:
  selector:
    deployment: hello-api
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui-preview
spec:
  selector:
    deployment: hello-ui
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
