overlays/staging/with-blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
spec:
  rules:
  - host: $(MAIN_HOSTNAME)
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 80
      - path: /api
        backend:
          serviceName: api
          servicePort: 80
      - path: /preview/
        backend:
          serviceName: ui
          servicePort: 80
      - path: /preview/api
        backend:
          serviceName: api-preview
          servicePort: 80
